View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026383 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-07-01 09:38 | 2016-04-20 15:48 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.9.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026383: Incorrect tolerance computing in IntTools_FaceFace::ComputeTolerance() | ||||
Description | line 865: const TopoDS_Face& aF = !i ? myFace1 : myFace2; aD = FindMaxDistance(aC3D, aFirst, aLast, aF, myContext); if (aD > aDMax) { aDMax = aD; } But it is not necessary in case of computing intersection line. All information about quality of intersection curve stored in "same parameter" tolerance computation (line 853-864). Proposed fix: Delete this block and dependent code. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26383 has been created by aml. SHA-1: d9141273b34e375f3109aba9cebbb5ba28ef1752 Detailed log of new commits: Author: aml Date: Wed Jul 1 09:44:28 2015 +0300 0026383: Incorrect tolerance computing in IntTools_FaceFace::ComputeTolerance() Projection of points 3d curve on faces deleted from ComputeTolerance(). |
|
Dear msv, Please check current state of branch CR26383. |
|
Reviewed. |
|
Dear BugMaster, Branch CR26383 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: d9141273b34e375f3109aba9cebbb5ba28ef1752 Number of compiler warnings: occt component: Linux: 25 (25 on master) Windows: 0 (0 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 98039666 / 98056296 [-0.02%] Total CPU difference: 18494.120000000108 / 18222.6600000001 [+1.49%] Testing on Windows: Total MEMORY difference: 56523648 / 56577171 [-0.09%] Total CPU difference: 17183.52575009888 / 17365.17331449884 [-1.05%] |
|
Branch CR26383 has been deleted by inv. SHA-1: d9141273b34e375f3109aba9cebbb5ba28ef1752 |
occt: master 260f924f 2015-07-01 06:44:28
Committer: bugmaster Details Diff |
0026383: Incorrect tolerance computing in IntTools_FaceFace::ComputeTolerance() Projection of points 3d curve on faces deleted from ComputeTolerance(). |
Affected Issues 0026383 |
|
mod - src/IntTools/IntTools_FaceFace.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-01 09:38 |
|
New Issue | |
2015-07-01 09:38 |
|
Assigned To | => aml |
2015-07-01 09:46 | git | Note Added: 0042623 | |
2015-07-01 09:48 |
|
Note Added: 0042624 | |
2015-07-01 09:48 |
|
Assigned To | aml => msv |
2015-07-01 09:48 |
|
Status | new => resolved |
2015-07-01 09:48 |
|
Steps to Reproduce Updated | |
2015-07-01 09:56 |
|
Note Added: 0042625 | |
2015-07-01 09:56 |
|
Assigned To | msv => bugmaster |
2015-07-01 09:56 |
|
Status | resolved => reviewed |
2015-07-01 12:23 |
|
Assigned To | bugmaster => apv |
2015-07-02 12:26 |
|
Test case number | => Not needed |
2015-07-02 12:26 |
|
Description Updated | |
2015-07-02 12:28 |
|
Note Added: 0042661 | |
2015-07-02 12:28 |
|
Assigned To | apv => bugmaster |
2015-07-02 12:28 |
|
Status | reviewed => tested |
2015-07-03 15:27 | bugmaster | Changeset attached | => occt master 260f924f |
2015-07-03 15:27 | bugmaster | Status | tested => verified |
2015-07-03 15:27 | bugmaster | Resolution | open => fixed |
2015-08-14 10:57 | git | Note Added: 0044209 | |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:48 |
|
Status | verified => closed |